@@ -53,16 +53,26 @@
 	static char RANAME[]=STR
 #else
 #ifdef __cplusplus
+#if REQ == 0 && OPT == 0 && VAR == 0
 #define SCM_PROC(RANAME, STR, REQ, OPT, VAR, CFN)  \
-%%%	scm_make_gsubr (RANAME, REQ, OPT, VAR, (SCM (*) (...)) CFN)
+%%%	scm_make_gsubr (RANAME, REQ, OPT, VAR, (SCM (*) ()) CFN)
+#else
+#define SCM_PROC(RANAME, STR, REQ, OPT, VAR, CFN)  \
+%%%	scm_make_gsubr (RANAME, REQ, OPT, VAR, (SCM (*) (SCM, ...)) CFN)
+#endif
+#if TYPE == scm_tc7_subr_0
 #define SCM_PROC1(RANAME, STR, TYPE, CFN)  \
 %%%	scm_make_subr(RANAME, TYPE, (SCM (*)(...)) CFN)
-#else /* not __cplusplus */
+#else
+#define SCM_PROC1(RANAME, STR, TYPE, CFN)  \
+%%%	scm_make_subr(RANAME, TYPE, (SCM (*)(...)) CFN)
+#endif
+#else /* __cplusplus */
 #define SCM_PROC(RANAME, STR, REQ, OPT, VAR, CFN)  \
 %%%	scm_make_gsubr (RANAME, REQ, OPT, VAR, CFN)
 #define SCM_PROC1(RANAME, STR, TYPE, CFN)  \
 %%%	scm_make_subr(RANAME, TYPE, CFN)
-#endif /* not __cplusplus */
+#endif /* __cplusplus */
 #endif
 
 #ifndef SCM_MAGIC_SNARFER
